packages/thespiae/thespiae-0.1.tar.gz/thespiae-0.1/thespiae/path/EnvParser.g4
/*
SPDX-License-Identifier: Apache-2.0

Copyright 2020 Andrey Pleshakov

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

parser grammar EnvParser;

options {
    tokenVocab = EnvLexer;
}

entry: UNQUOTED_STRING | DOUBLE_QUOTED_STRING;

path: EOF | entry (DELIM entry)* DELIM? EOF;

single_entry: entry EOF;
